<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.serenity.maven</groupId>
    <artifactId>serenitysample</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Serenity Repro Proj</name>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <serenity.version>1.7.4</serenity.version>
        <serenity.cucumber.version>1.6.4</serenity.cucumber.version>
        <selenium.version>3.7.1</selenium.version>
        <serenity.maven.version>1.7.4</serenity.maven.version>
        <maven.failsafe.plugin.version>2.20</maven.failsafe.plugin.version>
        <maven.compiler.plugin>3.6.1</maven.compiler.plugin>

        <!-- "Settings for custom drivers, local run - Serenity - Local profile"-->
        <webdriver.driver>provided</webdriver.driver>
        <webdriver.provided.type>mydriver</webdriver.provided.type>
        <webdriver.provided.mydriver>com.serenity.maven.customdrivers.CustomChromeDriver</webdriver.provided.mydriver>
        <serenity.driver.capabilities>provided</serenity.driver.capabilities>


        <!-- "Settings for remote drivers, run on Grid - Serenity - Parallel - docker-parallel" -->
        <!--<webdriver.remote.driver>chrome</webdriver.remote.driver>
        <webdriver.remote.url>http://localhost:4444/wd/hub</webdriver.remote.url> -->

        <sonar.language>java</sonar.language>


    </properties>


    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>

        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>1.7.1</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber</artifactId>
            <version>${serenity.cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd.maven.plugins</groupId>
            <artifactId>serenity-maven-plugin</artifactId>
            <version>${serenity.maven.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.24</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>1.7.0</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.3.3</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-core</artifactId>
            <version>1.19.3</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-client</artifactId>
            <version>1.19.3</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey.contribs</groupId>
            <artifactId>jersey-multipart</artifactId>
            <version>1.19.3</version>
        </dependency>


    </dependencies>
    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <configuration>
                    <includes>
                        <include>**/*TestSuite.java</include>
                    </includes>
                    <forkCount>5</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx512m</argLine>
                    <systemPropertyVariables>
                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.version}</version>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <profiles>

        <profile>
            <id>docker-parallel</id>
            <properties>
                <testrunner.prefixes></testrunner.prefixes>
                <failsafe.testrunner>%regex[.*(${testrunner.prefixes})TestSuite.class]</failsafe.testrunner>
                <parallel.tests>4</parallel.tests>
            </properties>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.sonarsource.scanner.maven</groupId>
                            <artifactId>sonar-maven-plugin</artifactId>
                            <version>3.2</version>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${maven.failsafe.plugin.version}</version>
                        <configuration>
                            <reportsDirectory>${project.build.directory}/failsafe-reports/e2e</reportsDirectory>
                            <summaryFile>${project.build.directory}/failsafe-reports/e2e/failsafe-summary.xml
                            </summaryFile>
                            <forkCount>1</forkCount>
                            <reuseForks>false</reuseForks>
                            <argLine>-XX:MaxPermSize=2G</argLine>
                            <failIfNoTests>false</failIfNoTests>
                            <skipITs>false</skipITs>
                            <includes>
                                <include>${failsafe.testrunner}</include>
                            </includes>
                            <parallel>classes</parallel>
                            <threadCount>${parallel.tests}</threadCount>
                            <forkCount>${parallel.tests}</forkCount>

                            <systemPropertyVariables>
                                <!--<webdriver.driver>${webdriver.driver}</webdriver.driver>-->
                                <webdriver.remote.driver>${webdriver.remote.driver}</webdriver.remote.driver>
                                <webdriver.remote.url>${webdriver.remote.url}</webdriver.remote.url>

                            <!--
                            <webdriver.driver>${webdriver.driver}</webdriver.driver>
                            <webdriver.provided.type>${webdriver.provided.type}</webdriver.provided.type>
                            <webdriver.provided.mydriver>${webdriver.provided.mydriver}
                            </webdriver.provided.mydriver>
                            <serenity.driver.capabilities>${serenity.driver.capabilities}
                            </serenity.driver.capabilities>
                            -->


                        </systemPropertyVariables>

                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>net.serenity-bdd.maven.plugins</groupId>
                    <artifactId>serenity-maven-plugin</artifactId>
                    <version>${serenity.maven.version}</version>
                    <executions>
                        <execution>
                            <id>serenity-reports</id>
                            <phase>post-integration-test</phase>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </build>
    </profile>

    <profile>
        <id>local</id>
        <properties>
            <testrunner.prefixes></testrunner.prefixes>
            <failsafe.testrunner>%regex[.*(${testrunner.prefixes})TestSuite.class]</failsafe.testrunner>
            <parallel.tests>1</parallel.tests>
        </properties>

        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven.failsafe.plugin.version}</version>
                    <configuration>
                        <reportsDirectory>${project.build.directory}/failsafe-reports/e2e</reportsDirectory>
                        <summaryFile>${project.build.directory}/failsafe-reports/e2e/failsafe-summary.xml
                        </summaryFile>
                        <forkCount>0</forkCount>
                        <reuseForks>false</reuseForks>
                        <argLine>-XX:MaxPermSize=2G</argLine>
                        <failIfNoTests>false</failIfNoTests>
                        <skipITs>false</skipITs>
                        <includes>
                            <include>${failsafe.testrunner}</include>
                        </includes>
                        <!-- Commented out to allow debugging
                        <parallel>classes</parallel>
                        <threadCount>${parallel.tests}</threadCount>
                        <forkCount>${parallel.tests}</forkCount>
                        -->
                            <systemPropertyVariables>

                                <webdriver.driver>${webdriver.driver}</webdriver.driver>
                                <webdriver.provided.type>${webdriver.provided.type}</webdriver.provided.type>
                                <webdriver.provided.mydriver>${webdriver.provided.mydriver}
                                </webdriver.provided.mydriver>
                                <serenity.driver.capabilities>${serenity.driver.capabilities}
                                </serenity.driver.capabilities>

                            </systemPropertyVariables>


                        </configuration>

                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>net.serenity-bdd.maven.plugins</groupId>
                        <artifactId>serenity-maven-plugin</artifactId>
                        <version>${serenity.maven.version}</version>
                        <executions>
                            <execution>
                                <id>serenity-reports</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>


        <profile>
            <id>localenv</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <resources>
                    <resource>
                        <directory>src/test/resources/environment/int</directory>
                    </resource>
                </resources>
            </build>
        </profile>
        <profile>
            <id>int</id>
            <build>
                <resources>
                    <resource>
                        <directory>src/test/resources/environment/int</directory>
                    </resource>
                </resources>

            </build>
        </profile>

    </profiles>




</project>